update to new event api

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
+---
 sudo: true
 language: ruby
 cache: bundler
-before_install: sudo apt-get install libzmq3-dev
+before_install:
+- git clone -b feature/event_interface https://github.com/elastic/logstash
+- sudo apt-get install libzmq3-dev
 rvm:
-  - jruby-1.7.24
+- jruby-1.7.25
 script:
-  - bundle exec rspec spec
+- bundle exec rspec spec
+jdk: oraclejdk8
